[tool.poetry]
name = "ck-cli"
version = "0.1.0"
description = "CLI for AutoCheckTool"
authors = ["Alkaidcc <932214806@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.2"
wcwidth = "^0.2.5"
prompt-toolkit = "^3.0.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
